[gd_scene load_steps=2 format=3 uid="uid://ccgod6efaco68"]

[ext_resource type="Script" path="res://Prog_122c.gd" id="1_si6sl"]

[node name="Prog_122c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = 3.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si6sl")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = 33.0
offset_right = 1077.0
offset_bottom = 401.0

[node name="Calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 526.0
offset_right = 243.0
offset_bottom = 619.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 283.0
offset_top = 524.0
offset_right = 480.0
offset_bottom = 617.0
text = "Clear"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 525.0
offset_top = 524.0
offset_right = 722.0
offset_bottom = 617.0
text = "Exit"

[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
